# aberration-correction-for-eyepieceless-HNED

./: README.md  pyproject.toml
output/: baboon-300step_fz20mm_coeff45.csv  baboon-300step_fz35mm_coeff45.csv  baboon-300step_fz50mm_coeff45.csv
output/raw-data/: baboon-300step_fz75mm_coeff45.csv
src/: functions.py  image_prop_tester.ipynb  simple_holomaker.ipynb  test_gpu.ipynb  test_gpu.py  zero.py
