[tool.poetry]
name = "aberration-correction-for-eyepieceless-hned"
version = "0.1.0"
description = ""
authors = ["Kazushi Nakamura <kazushi.02140413@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.13"
tensorflow-gpu = "^2.9.1"
opencv-contrib-python = "^4.6.0"
matplotlib = "^3.5.2"
sympy = "^1.10.1"
jupyter = "^1.0.0"
[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
